# aCRUD

./: .gitignore  README.md  pyproject.toml  storage.config
acrud/: __init__.py  settings.py
acrud/schema/: __init__.py  base.py  local.py  s3.py
acrud/storage/: __init__.py  base.py  convert.py  factory.py
acrud/storage/local/: local.py
acrud/storage/mongodb/: mongodb.py
acrud/storage/s3/: s3.py
resources/test_files/: test.pkl
scripts/: test.py
scripts/google_drive/: test.py
scripts/local/: create.py
scripts/s3/: create.py  delete.py  list_directories.py  list_files.py  load_string.py  read.py  save_obj.py  save_string.py  storage.config
storage/: __init__.py  base.py
storage/local/: local.py
storage/s3/: s3.py
test/functional/local/: test_local.py
test_data/: meta.json
tests/s3/unit/: conftest.py  test_delete_directory.py  test_list_files_in_directory.py  test_list_subdirectories_in_directory.py  test_load_obj.py  test_load_string.py  test_save_obj.py  test_save_string.py
